--- a/05-WRF-Hydro IO.Rmd
+++ b/05-WRF-Hydro IO.Rmd
@@ -32,7 +32,7 @@ options(htmltools.dir.version = FALSE)
 
 ---
 
-# WRF-Hydro Workflow  
+# Offline WRF-Hydro Workflow    
 <div align="center">
 <img src="WRF-Hydro-Workflow.png" width=800 height=480>
 </div>
@@ -40,7 +40,24 @@ options(htmltools.dir.version = FALSE)
 
 ---
 
-# Meteorological Forcing 1: Datasets  
+# WRF-Hydro Workflow  
+<div align="center">
+<img src="WRF-Hydro-Workflow-Executable.png" width=800 height=480>
+</div>
+(Courtesy **WRF-Hdyro Training Material**) 
+
+---
+
+# Configureation  
+* hydro.namelist: WRF-Hydro with Description of Options   
+  [PDF Link](https://ral.ucar.edu/sites/default/files/public/WRF-Hydrohydro.namelistFilewithDescriptionofOptions.pdf)
+  
+  
+* namelist.hrldas: NoahMP with a Description of Options  
+  [PDF Link](https://ral.ucar.edu/sites/default/files/public/NoahMPnamelist.hrldasFilewithDescriptionofOptions.pdf)
+---
+
+# Meteorological Forcing: Datasets  
 
 Abbr.| Name | Link  
 ----|----|----  
@@ -51,6 +68,23 @@ MRMS|Multi Radar Multi Sensor System |[NOAA](http://mrms.ncep.noaa.gov/data/)
 RAP|Rapid Refresh|[NOAA](https://rapidrefresh.noaa.gov/hrrr/)   
 GFS|Global Forecast System|[UCAR](https://rda.ucar.edu/datasets/ds084.6/#!description)   
 
+---
+
+# Meteorological Forcing: Variables 
+* Temperature (deg K)  
+
+* Humidity-mixing ratio (kg/kg)  
+
+* Short & longwave radiation (W/m^2)  
+
+* Pressure (Pa)  
+
+* Wind speed (m/s) (can be u-,v-components, can be magnitude and direction)  
+
+* Precipitation rate (mm/s)  
+
+ALL FORCING DATA IS MAPPED TO SAME GRID (based on WRF ‘geogrid’)  
+SPECIFIED PRECIPITATION MAY HAVE HIGHER TIME RESOLUTION (e.g. 5min)  
 ---
 
 # Meteorological Forcing 1: Regridding
@@ -148,7 +182,7 @@ readNWISuv(siteNumbers = gages[i:j],
 devtools::install_github("NCAR/rwrfhydro")
 ```
 
-|   |
+|  Resource  | Link   |
 |----|----|  
 |Website|https://ral.ucar.edu/projects/wrf_hydro/rwrfhydro | 
 |Document|https://rdrr.io/github/mccreigh/rwrfhydro/ |  
