--- a/06-WRF-Hydro-Postprecess.Rmd
+++ b/06-WRF-Hydro-Postprecess.Rmd
@@ -81,4 +81,26 @@ git pull
 
 * Plot Hydrograph  
 `Hydrograph.Comp.US.ggplot2.png.R`  
+---
+
+# Iterative run  
+.pull-left[
+* Currently, WRF-Hydro is restated manually. 
+    + Submit a job with maximum time  
+    + Ouput restart files every 15 day  
+    + Restart WRF-Hydro every 2-3 years  
+        - Find the most recent restart point  
+        - Change the start point `namelist.hrlads` and `hydro.namelist` 
+        - Submit a new job  
+]
+
+.pull-right[
+* Automatically WRF-Hydro restart run  
+    + A normal inital run  
+    + Automatical restart    
+        - No model crash 
+        - One year restart interval  
+        - Restart at the beginning of the year  
+]
+
 
